first draft discussion

--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -80,38 +80,39 @@ could be observed (Björk, 2017; Huang et al., 2020; Jubb et al., 2017;
 Piwowar et al., 2018). For example, studying university output,
 Robinson-Garcia et al. (2020) estimated a median uptake of 7.1\% in the
 period 2014-2017. In particular, British (17\%), Austrian (15\%) and
-Dutch (13\%) universities contributed to this trend. However, this shift
-in funding policy towards hybrid open access also added to the overall
-cost of publishing, which includes subscription spending and the
-administrative efforts required to handle payments (Pinfield et al.,
-2016). Moreover, established large commercial publishers, which already
-dominated the publishing market (Larivière et al., 2015),
-disproportionately benefited from hybrid open access funding in
-comparison to full open access publishers (Butler et al., 2023; Jahn \&
-Tullney, 2016; Shu \& Larivière, 2023).
+Dutch (13\%) universities stand out. However, this shift in funding
+policy towards hybrid open access also added to the overall cost of
+publishing, which includes subscription spending and the administrative
+efforts required to handle payments (Pinfield et al., 2016). Moreover,
+established large commercial publishers, which already dominated the
+publishing market (Larivière et al., 2015), disproportionately benefited
+from hybrid open access funding in comparison to full open access
+publishers (Butler et al., 2023; Jahn \& Tullney, 2016; Shu \&
+Larivière, 2023).
 
 As a consequence, libraries and their consortia began to develop
 licensing strategies aimed at avoiding such `double dipping' scenarios,
 in which well-established commercial publishers gain twice from reading
-and open access publishing, as well as to increase publisher-provided
-immediate open access (Björk \& Solomon, 2014; Schimmer et al., 2015).
-These considerations resulted into transformative agreements\footnote{In
-  this paper I use the term ``transformative agreement'', addressing
-  also offsetting, read-and-publish or publish-and-read deals, and other
-  variants (Borrego et al., 2020; Hinchliffe, 2019). Although the term
-  is critised as misleading and not useful to describe these agreements
-  between library consortia and publishers (Babini et al., 2022), it is
-  widely used in policy discussions and in the research literature.},
-which cover a broad range of contracts between library consortia and
-publishers from mid-2010s onwards where institutional spending for
-subscriptions and open access publishing are considered together
-(Borrego et al., 2020; Hinchliffe, 2019). Transformative agreements seek
-to control costs while allowing a transitional phase for publishing more
-open access articles. Similar to big deals, transformative agreements
-mainly bundle hybrid and subscription-only journals from commercial
-publishers, but aim at a higher degree of transparency than previous big
-deals, where contracts including payments were confidential (Bergstrom
-et al., 2014).
+and open access publishing (Mittermaier, 2015), as well as to increase
+publisher-provided immediate open access (Björk \& Solomon, 2014;
+Schimmer et al., 2015). These considerations resulted into
+transformative agreements\footnote{In this paper I use the term
+  ``transformative agreement'', addressing also offsetting,
+  read-and-publish or publish-and-read deals, and other variants
+  (Borrego et al., 2020; Hinchliffe, 2019). Although the term is
+  critised as misleading and not useful to describe the different types
+  of open access agreements between library consortia and commercial
+  publishers (Babini et al., 2022), it is widely used in policy
+  discussions and in the research literature.}, which cover a broad
+range of contracts between library consortia and publishers from
+mid-2010s onwards where institutional spending for subscriptions and
+open access publishing are considered together (Borrego et al., 2020;
+Hinchliffe, 2019). Transformative agreements seek to control costs while
+allowing a transitional phase for publishing more open access articles.
+Similar to big deals, transformative agreements mainly bundle hybrid and
+subscription-only journals from commercial publishers, but aim at a
+higher degree of transparency than previous big deals, where contracts
+including payments were confidential (Bergstrom et al., 2014).
 
 The introduction of transformative agreements aligns with funding policy
 changes, such as the decision made by the cOAlition S, a consortium of
@@ -149,13 +150,13 @@ transformative agreements lead to reduced pricing remains uncertain
 (Borrego, 2023) and a substantial transition of hybrid journals towards
 full open access could not be observed (Matthias et al., 2019; Momeni et
 al., 2021). The focus on large commercial publishers might also increase
-inequality, because transformative agreements focus on pay to publish
-open access mainly targets institutions from high-income countries,
-furthering a questionable journal prestige culture (Babini et al.,
-2022). Besides, an editorial-board resignation raised concerns that
-publishers' desire to maximize journal publication volume ``without
-regard to quality'' is a consequence of transformative agreements
-(Rasmussen, 2023).
+inequality (Klebel \& Ross-Hellauer, 2023), because transformative
+agreements focus on pay to publish open access mainly targets
+institutions from high-income countries, furthering a questionable
+journal prestige culture (Babini et al., 2022). Besides, an
+editorial-board resignation raised concerns that publishers' desire to
+maximize journal publication volume ``without regard to quality'' is a
+consequence of transformative agreements (Rasmussen, 2023).
 
 The controversies surrounding hybrid open access and transformative
 agreements have led to varying policy conclusions. For instance, the
@@ -167,7 +168,7 @@ for transformative agreements by the end of 2024 (Liverpool, 2023). The
 consortium also removed most hybrid journals from its Transformative
 Journal program in 2023 due to publishers' failure to meet self-defined
 open access growth targets (Brainard, 2023). In contrast, the German
-DEAL consortium signed a five-year transformative agreement with
+DEAL consortium announced a five-year transformative agreement with
 Elsevier starting in 2024, while also renewing its contracts with
 Springer Nature and Wiley until the end of 2028. At the same time, the
 Colombia Consortium signed the first transformative agreements in Latin
@@ -188,13 +189,14 @@ availability is a limiting factor when studying the impact of
 transformative agreements (Bakker et al., 2024), because bibliometric
 databases, even though many allow the retrieval of open access articles
 in hybrid journals, do not directly attribute them to specific
-transformative agreements.
+transformative agreements. Likewise, article-level open access invoicing
+data is only partly available (Jahn et al., 2022).
 
 The present study aims to address these limitations by combining
 multiple openly available data sources to determine the open access
 uptake in hybrid journals, while distinguishing between open access
 through transformative agreements and other means. With this novel and
-open approach, this the first large-scale analysis aims to answer the
+open approach, this first large-scale analysis aims to answer the
 following questions:
 
 \begin{itemize}
@@ -214,9 +216,9 @@ variability by publisher, journal subject, and country.
 \section{Methods}\label{methods}}
 
 This study combines data from multiple publicly available data sources
-as diagrammatically shown in Figure \ref{fig:data_workflow}. Initially,
-transformative agreement data retrieved from the cOAlition S Journal
-Checker Tool\footnote{\url{https://www.coalition-s.org/blog/enabling-accurate-results-within-the-journal-checker-tool/}}
+as shown in Figure \ref{fig:data_workflow}. Initially, transformative
+agreement data retrieved from the cOAlition S Journal Checker
+Tool\footnote{\url{https://www.coalition-s.org/blog/enabling-accurate-results-within-the-journal-checker-tool/}}
 provided information about journal portfolios and participating
 institutions. After identification of hybrid journals by excluding full
 open access journals, Crossref served as the primary data source for
@@ -308,11 +310,13 @@ information relative to the ``accepted manuscript (AM)'' version were
 not considered. Crossref was used for open access identification because
 transformative agreements workflows generally require publishers to
 deliver CC license information to this DOI registration agency (Geschuhn
-\& Stone, 2017). Comparing Crossref license coverage with OpenAlex,
-which re-uses open access evidence from Unpaywall, a widely used open
-access discovery service that also parses journal websites for open
-content licenses (Piwowar et al., 2018), highlighted ongoing challenges
-to identify hybrid open access (Butler et al., 2023; Jahn et al., 2022;
+\& Stone, 2017).
+
+Comparing Crossref license coverage with OpenAlex, which re-uses open
+access evidence from Unpaywall, a widely used open access discovery
+service that also parses journal websites for open content licenses
+(Piwowar et al., 2018), highlighted ongoing challenges to identify
+hybrid open access (Butler et al., 2023; Jahn et al., 2022;
 Martín-Martín et al., 2018; Zhang et al., 2022). Here, 742,369 articles
 with CC license were retrieved using Crossref, while 950,260 articles
 were tagged as ``hybrid'' according to the OpenAlex November 2023
@@ -326,8 +330,8 @@ American Physiological Society, Emerald and the Royal Society. Crossref
 license metadata was more complete with regard to articles from the
 publisher Wiley and American Chemical Society. Finally, inconsistent
 open access status information in previous OpenAlex versions was
-observed (Jahn et al., 2023). After reporting it to OpenAlex, according
-to the release notes, fixing this issue was still ongoing, which might
+observed (Jahn et al., 2023). After reporting it to OpenAlex, fixing
+this issue was still ongoing according to the release notes, which might
 also explain part of the discrepancy.
 
 After retrieving article metadata, the publication volume including open
@@ -380,7 +384,7 @@ according to Crossref, while full open access journals recorded 35\%.
 \end{figure}
 
 \hypertarget{data-analysis}{%
-\subsection{Data Analysis}\label{data-analysis}}
+\subsection{Data analysis}\label{data-analysis}}
 
 Throughout this mostly automated data gathering and analysis process,
 tools from the Tidyverse (Wickham et al., 2019) for the R programming
@@ -429,7 +433,7 @@ Figure \ref{fig:results_overview}B highlights that the majority of
 hybrid open access was made available through transformative agreements
 in 2021 and 2022, contributing 58\% of the total open access article
 volume in 2022. However, there was also a notable growth in open access
-provision through other means, most likely publication fees being not
+provision through other means, presumably publication fees being not
 invoiced through transformative agreements, which increased from 4.1\%
 (n = 62,625) in 2018 to 6.3\% (n = 105,896).
 
@@ -502,9 +506,9 @@ articles available through such deals (Springer Nature 57\% resp. Wiley
 55\%).
 
 Figure \ref{fig:publisher_figure} takes a closer look into the growth of
-hybrid open access across publishers by year with a focus on open
-articles enabled by transformative agreements. Although all publishers
-show a general long-term trend towards transformative agreements, Figure
+hybrid open access across publishers by year with a focus on open access
+enabled by transformative agreements. Although all publishers show a
+general long-term trend towards transformative agreements, Figure
 \ref{fig:publisher_figure}A and B indicate that, in particular, Wiley
 experienced a substantial increase in its open access share from 5.9\%
 (n = 11,628) in 2018 to 26\% (n = 53,503) in 2022, representing an
@@ -651,9 +655,9 @@ an intergovernmental organisation, which comprised the countries Brazil,
 Russia, India, China and South Africa as of 2022. The residual category
 ``Other'' includes the remaining countries. From 2018 to 2022, the
 proportion of open access in hybrid journals increased from 6.1\% in
-2018 to 26\% in 2022. On the other hand, BRICS recorded an low uptake,
+2018 to 26\% in 2022. On the other hand, BRICS recorded a low uptake,
 from 1.6\% in 2018 to 3.7\% in 2022.\\
-Despite rise of open access across OECD countries, the overall
+Despite the rise of open access across OECD countries, the overall
 publication output decreased sharply, dropping to 786,903 in 2022 after
 peaking 892,197 articles in 2020. In stark contrast, the number of
 articles published in hybrid journals by first authors affiliated with
@@ -683,24 +687,23 @@ compares total publication output with the number of open access
 articles. With 391,530 articles, China was the most productive country,
 followed by the United States (268,965 articles) and India (87,428
 articles). In contrast, West and Nord European countries published a
-considerable high number of open access articles, mainly due to
-transformative agreements. Particularly, Germany, Great Britain, the
-Netherlands, Sweden, Switzerland and Spain recorded an above-average
-open access share as indicated by the linear trend line. As represented
-by the point size, as well as it can been seen in Figure
-\ref{fig:country_patch}C, transformative agreements contributed to these
-market positions. Interestingly, the United States had a notable open
-access market share of 15\%, although transformative agreements
-contributed to a lesser extent. Similarly, China's open access market
-share of 7.2\% in 2022 was comparable to that of the Netherlands, which
-was 7.1\%.
+considerable high number of open access articles. Particularly, Germany,
+Great Britain, the Netherlands, Sweden, Switzerland and Spain recorded
+an above-average open access share as indicated by the linear trend
+line. As represented by the point size, as well as it can been seen in
+Figure \ref{fig:country_patch}C, transformative agreements contributed
+to these market positions. Interestingly, the United States had a
+notable open access market share of 15\%, although transformative
+agreements contributed to a lesser extent. Similarly, China's open
+access market share of 7.2\% in 2022 was comparable to that of the
+Netherlands, which was 7.1\%.
 
 Figure \ref{fig:country_top_20_plot} illustrates the development of
 hybrid open access from 2018 to 2022, highlighting the top 20 most
 productive countries in terms of articles published in hybrid journals
 that were included in transformative agreements over the five-year
 period. Notably, The Netherlands (27\%), Sweden (24\%), Poland (17\%)
-and Great Britain (17\%)) exhibited a relatively high level of uptake in
+and Great Britain (17\%) exhibited a relatively high level of uptake in
 2018 which continued to increase in the following years. In 2022, Sweden
 had the highest proportion of open access relative to its publication
 output (78\%), followed by the Netherlands (67\%) and Switzerland
@@ -726,12 +729,13 @@ agreements. However, proliferation of transformative agreements differed
 across these countries. For instance, Germany successfully negotiated an
 agreement with Elsevier not until 2023. Additionally, publication limits
 or eligibility criteria for institutions and article types may explain
-why even countries with widespread agreement implementation do not
-achieve 100\% hybrid open access. Interestingly, in Japan and the US
-other options than transformative agreements were the main driver for
-the increase in hybrid open access. Once again, the graph highlights
-countries with low hybrid open access, particularly non-OECD countries,
-where only a few or no agreements were in place.
+why even countries with widespread agreement implementation like Sweden
+or the Nethterlands did not achieve 100\% hybrid open access.
+Interestingly, in Japan and the US other options than transformative
+agreements were the main driver for the increase in hybrid open access.
+Once again, the graph highlights countries with low hybrid open access,
+particularly non-OECD countries, where only a few or no agreements were
+in place.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
@@ -743,16 +747,15 @@ subscription-based academic publishing to full open access. This study
 presents a novel approach based on open data, which leverages metadata
 on over 700 agreements and nine million journal articles to estimate the
 extent to which transformation agreement contribute to the transition of
-this journal business model based on institutional affiliation. The
-results highlight a strong growth in open access between 2018 and 2022,
-particularly driven by an increasing number of institutions that had
-transformative agreements in place. Yet, the majority of research
-literature published in hybrid journals in this five-year period
-remained behind a publisher's paywall. Growth in the adoption of open
-access in hybrid journals, in particular through transformative
-agreements, can be largely attributed to three large commercial
-publishers -- Elsevier, Springer Nature, and Wiley -- but varies
-substantially across journals, publishers, subjects, and country
+this journal business model. The results highlight a strong growth in
+open access between 2018 and 2022, particularly driven by an increasing
+number of institutions that had transformative agreements in place. Yet,
+the majority of research literature published in hybrid journals in this
+five-year period remained behind a publisher's paywall. Growth in the
+adoption of open access in hybrid journals, in particular through
+transformative agreements, can be largely attributed to three large
+commercial publishers -- Elsevier, Springer Nature, and Wiley -- but
+varies substantially across journals, publishers, subjects, and country
 affiliations. Despite the limitations of the data used, the findings
 indicate that the current level of implementation of transformative
 agreements is insufficient to bring about a large-scale transition to
@@ -760,25 +763,24 @@ fully open access.
 
 A key finding of the analysis is that transformative agreements increase
 market concentration. Specifically, the three largest commercial
-publishers---Elsevier, Springer Nature, and Wiley---have increased their
-market share in the context of open access, particularly in regard to
-open access provided through transformative agreements. Together, the
-three publishers accounted for three-fourths of open access articles
-through transformative agreements, despite publishing less than half of
-the total publication volume published between 2018 and 2022. This
-observation aligns with previous research on shifts in the publishing
-market following the introduction of funding opportunities for hybrid
-open access (Butler et al., 2023; Jahn \& Tullney, 2016; Shu \&
-Larivière, 2023). Additionally, the results confirm previously observed
-variations by publisher, with Elsevier exhibiting a different
-development than Springer Nature and Wiley (Butler et al., 2023; Jahn et
-al., 2022). However, it must be noted that the focus of transformative
-agreements on publishers with large hybrid journal portfolios is
-intentional (Campbell et al., 2022). Because of transformative
-agreements with a few large publishers, national consortia were able to
-substantially increased their country's annual open access article
-volume (Huang et al., 2020; Pinhasi et al., 2021; Taubert et al., 2023;
-Wenaas, 2022).
+publishers Elsevier, Springer Nature, and Wiley dominate, particularly
+in regard to open access provided through transformative agreements.
+Together, the three publishers accounted for three-fourths of open
+access articles through transformative agreements, despite publishing
+less than half of the total publication volume published between 2018
+and 2022. This observation aligns with previous research on shifts in
+the publishing market following the introduction of funding
+opportunities for hybrid open access (Butler et al., 2023; Jahn \&
+Tullney, 2016; Shu \& Larivière, 2023). Additionally, the results
+confirm previously observed variations by publisher, with Elsevier
+exhibiting a different development than Springer Nature and Wiley
+(Butler et al., 2023; Jahn et al., 2022). However, it must be noted that
+the focus of transformative agreements on publishers with large hybrid
+journal portfolios is intentional (Campbell et al., 2022). Because of
+transformative agreements with a few large publishers, national
+consortia were able to substantially increase their country's annual
+open access article volume (Bosman, Jonge, et al., 2021; Huang et al.,
+2020; Pinhasi et al., 2021; Taubert et al., 2023; Wenaas, 2022).
 
 Moreover, this study presents varying levels of open access uptake
 through transformative agreements across journals, which can be
@@ -792,60 +794,107 @@ study by Khanna et al. (2022) found that approximately 60\% of journals
 utilizing the open-source publishing platform Open Journal Systems (OJS)
 fall within the Social Sciences and Humanities. In these fields, the
 majority of full open access journals are so-called ``Diamond OA
-journals'' that do not charge publication fees (Bosman et al., 2021).
-Rather, this result can be more accurately attributed to the substantial
-proportion of authors from high-income countries who publish in these
-hybrid journals included in transformative agreements, particularly when
-journals are of local relevance, such as through the belonging to
-national societies or regional research scope.
+journals'' that do not charge publication fees (Bosman, Frantsvåg, et
+al., 2021). Rather, this result can be more accurately attributed to the
+substantial proportion of authors from high-income countries who publish
+in these hybrid journals included in transformative agreements,
+particularly when journals are of local relevance, such as through the
+belonging to national societies or regional research scope.
 
 Surprisingly, the total publication output of high-income countries
-belonging to the OECD declined susbtantially between 2018 and 2022,
-while the BRICS countries recorded an steady increase. Because the BRICS
-expansion can be exclusivley attributed to closed access articles, this
-developement has the potential to hinder the transition of academic
-journal publishing to full open access through transformative
-agreements. In China, the most productive country according to the total
-article volume in hybrid journals, (shu und zhang und das indische
-paper)
+belonging to the OECD in hybrid journals declined substantially after
+peaking in 2020, whereas that of BRICS countries doubled from 2018 to
+2022. Because the BRICS expansion can be exclusively attributed to
+closed access articles, this development has the potential to hinder the
+transition of academic journal publishing to full open access through
+transformative agreements and demands discussion. In China, the country
+with the highest volume of articles in hybrid journals, limited research
+funding to pay for open access is available, with expenditures for open
+access publishing already surpassing subscription costs (Shu \&
+Larivière, 2023). Furthermore, the focus of Chinese authors on
+established journals may contribute to this trend (Zhang et al., 2022).
+Although China supports Plan S (Schiermeier, 2018), this is not
+reflected in the data in terms of open access uptake in hybrid journals.
+As highlighted by Koley \& Lala (2023), India faces similar challenges
+in terms of resources to pay for open access. At the same time, access
+to research literature is a pressing, which is adressed by the ``Indian
+one nation, one subscription'' policy proposal. However, this policy
+focuses on centrally negotiated subscriptions and does not entail open
+access.
 
-other countries less represented and brazil diamond russia The Eastern
-Europe Expanded Collection
+But open access uptake also differs among OECD countries. In the United
+States, for example, hybrid open access including transformative
+agreements plays a lesser role compared to some European countries. The
+smallest share of federally funded research was hybrid open access
+between 2017 and 2021 (Schares, 2023). While some university consortia
+like the California Digital Library signed transformative agreements,
+others attempt to depart from big deals and unbundle large journal
+portfolios to address cost increases (Brainard, 2021; Schares, 2022).
+Despite the relatively low penetration of transformative agreements in
+China and the United States compared to Europe, 22\% of open access in
+hybrid journals in 2022 originates from these two countries, indicating
+the availability of funding sources for publication fees.
 
-but not coherent acorss all countries, in particular in the us.
-neverthelles china and us have susbtantial market shares when it comes
-to hybrid oa.
+This large-scale study provides first empricial evidence about the
+influence of transformative agreements on the transition of hybrid
+journals to full open access. However, several limitations needs to be
+acknowledged. From a data perspective, estimations of open access
+through transformative agreements were established by linking first
+author affiliations with publicly available agreement data from
+cOAlition S, and not through invoicing data because these data a usually
+not shared by publishers. Moreover, this study is unable to account for
+the various types of transformative agreements, particularly with
+regards to article types and capping. Similarly, assessing the quality
+of the OpenAlex and Crossref data used, particularly in terms of
+affiliations and article types, in comparison with established
+bibliometric databases was beyond the scope of this analysis. Overall,
+the methodology is designed in such a way that the results underestimate
+rather than overestimate the adoption of open access through
+transformative agreements. In addition, the data used in this study are
+openly available, along with the code used for this analysis.
 
-There are at least three potential limitations concerning the results of
-this study. A first limitation concerns \ldots{} A second potential
-limitation is that \ldots{}
+Additionally, it must be noted that the study period was significantly
+impacted by the COVID-19 pandemic, which led to an unprecedented number
+of publications as well as restrictions on migration flows, which could
+have influenced the country-specific results (Aviv-Reuven \& Rosenfeld,
+2021; Zhao et al., 2023). Furthermore, the study design did not consider
+emerging publication practices such as preprints (Fraser et al., 2021)
+and questionable special issues (Hanson et al., 2023), which have grown
+particularly rapidly since 2020. Lastly, it should be emphasized that
+the study aims to estimate articles enabled through transformative
+agreements but does not address financial shifts due to a lack of data
+on expenditures.
 
-These data have some potential intervention implications. forst and
-formesot, the supprot recent pocliy decision highlighting a grew in oa
-at country-level, but questioning the. if thouse contracts, a
-transiliteration is ttoo short and might require a longer
-transiltierional period. the growtrh in brics however would require too
-impleis unboundling, other payment means and focus on alternative, in
-particular innovations like preprinting, diamond oa
+This present study allows multiple strands of further research. One is
+to complement this large-scale study with more specific evidence from
+individual countries or subjects, particularly those with low hybrid
+open access rates. Incorporating full open access and subscription-based
+journals, as well as considering global trends in scholarly migration
+and collaboration could also be promising. Financial studies could build
+upon the presented study design and incorporate subscription and open
+access expenditures to evaluate the cost-effectiveness of transformative
+agreements.
 
-In terms of future research, it would be useful to extend the current
-findings by examining other oa types, combine oa with mobility.
-fianncials tudies are also required to assess claims of cost-sensitive,
-here, publisher and publsiher are required to increase transparency. at
-the same time, studies needed to assess these claim economically. data
-can be improved to entail more, in apritcular consortia could start to
-disclose funded articles as , with openapc already a cwors-orucing
-platform available. also libraries can contrbute to an improved
-catalogiuing of transformative agreements including participating
-insitutions, which is aligned with standards used in schoalrly
-communications like ror id.
+But the study also has practival implications for research funders and
+libraries. Of primary concern should be observed differences across
+countries, in particular the relationship between economic development
+and open access adoption. From a data perspective, the reporting of open
+access funding is not harmonised, but often crowd-sourced from various
+sources. To improve the assessment of transformative agreements,
+libraries and publishers could contribute by providing information about
+respective journal portfolios, participating institutions and open
+access invoicing.
 
-In summary, after more than tow decades, hybrid open access has not
-demonstrated a succesful menas. stduying transofrmative agreemnts,
-effects can be found at the -level of participating countries, but
-overlla uptake remains low, in particular with regard to publications
-from brocs countries, which country share rise, exclusively on the
-expense of closed access. means
+In summary, the aim of this study was to provide empirical insights into
+the developement of hybrid open access following the introduction of
+transformative agreements. The results are important for both
+researchers and stakeholders engaged in negotiating and evaluating these
+agreements. The presented approach relies on open data, which enables
+follow-up studies and open access monitoring acitvties to further
+explore the role of transformative agreements in facilitating the shift
+towards full open access in academic publishing.
+
+--\textgreater{}
 
 \hypertarget{references}{%
 \section*{References}\label{references}}
@@ -853,6 +902,12 @@ expense of closed access. means
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
+\leavevmode\vadjust pre{\hypertarget{ref-Aviv_Reuven_2021}{}}%
+Aviv-Reuven, S., \& Rosenfeld, A. (2021). Publication patterns' changes
+due to the COVID-19 pandemic: A longitudinal and short-term
+scientometric analysis. \emph{Scientometrics}, \emph{126}(8),
+6761--6784. \url{https://doi.org/10.1007/s11192-021-04059-x}
+
 \leavevmode\vadjust pre{\hypertarget{ref-budapest}{}}%
 Babini, D., Chan, L., Hagemann, M., Joseph, H., Kuchma, I., \& Suber, P.
 (2022). \emph{{The Budapest Open Access Initiative-20th. Anniversary
@@ -902,9 +957,20 @@ Bosman, J., Frantsvåg, J. E., Kramer, B., Langlais, P.-C., \& Proudman,
 V. (2021). \emph{OA diamond journals study. Part 1: findings}. Zenodo.
 \url{https://doi.org/10.5281/zenodo.4558704}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Bosman_2021}{}}%
+Bosman, J., Jonge, H. de, Kramer, B., \& Sondervan, J. (2021). Advancing
+open access in the netherlands after 2020: From quantity to quality.
+\emph{Insights the UKSG Journal}, \emph{34}.
+\url{https://doi.org/10.1629/uksg.545}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Brainard_2021}{}}%
+Brainard, J. (2021). California universities and elsevier make up, ink
+big open-access deal. \emph{Science}.
+\url{https://doi.org/10.1126/science.abi5505}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Brainard_2023}{}}%
 Brainard, J. (2023). {`Transformative'} journals get booted for
-switching to open access too slowly. In \emph{Science: SCIENCEINSIDER}.
+switching to open access too slowly. In \emph{Science}.
 \url{https://doi.org/10.1126/science.adj3282}
 
 \leavevmode\vadjust pre{\hypertarget{ref-goldoa}{}}%
@@ -932,6 +998,13 @@ Mele, S., Polydoratou, P., Ross, D., Ruiz-Perez, S., Schimmer, R.,
 Swaisland, M., \& Stelt, W. van der. (2010). \emph{{Open Access
 Publishing - Models and Attributes}} (T. S. consortium, Ed.).
 
+\leavevmode\vadjust pre{\hypertarget{ref-Fraser_2021}{}}%
+Fraser, N., Brierley, L., Dey, G., Polka, J. K., Pálfy, M., Nanni, F.,
+\& Coates, J. A. (2021). The evolving role of preprints in the
+dissemination of COVID-19 research and their impact on the science
+communication landscape. \emph{PLOS Biology}, \emph{19}(4), e3000959.
+\url{https://doi.org/10.1371/journal.pbio.3000959}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Fraser_2023}{}}%
 Fraser, N., Hobert, A., Jahn, N., Mayr, P., \& Peters, I. (2023). No
 deal: German researchers' publishing and citing behaviors after big deal
@@ -943,6 +1016,11 @@ Geschuhn, K., \& Stone, G. (2017). It's the workflows, stupid! What is
 required to make {`offsetting'} work for the open access transition.
 \emph{Insights the {UKSG} Journal}, \emph{30}(3), 103--114.
 \url{https://doi.org/10.1629/uksg.391}
+
+\leavevmode\vadjust pre{\hypertarget{ref-hanson2023strain}{}}%
+Hanson, M. A., Barreiro, P. G., Crosetto, P., \& Brockington, D. (2023).
+\emph{The strain on scientific publishing}.
+\url{https://arxiv.org/abs/2309.15884}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Haucap_2021}{}}%
 Haucap, J., Moshgbar, N., \& Schmal, W. B. (2021). The impact of the
@@ -989,6 +1067,17 @@ Khanna, S., Ball, J., Alperin, J. P., \& Willinsky, J. (2022).
 Recalibrating the scope of scholarly publishing: A modest step in a vast
 decolonization process. \emph{Quantitative Science Studies},
 \emph{3}(4), 912--930. \url{https://doi.org/10.1162/qss_a_00228}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Klebel_2023}{}}%
+Klebel, T., \& Ross-Hellauer, T. (2023). The APC-barrier and its effect
+on stratification in open access publishing. \emph{Quantitative Science
+Studies}, \emph{4}(1), 22--43. \url{https://doi.org/10.1162/qss_a_00245}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Koley_2023}{}}%
+Koley, M., \& Lala, K. (2023). Limitations of the {``indian one nation,
+one subscription''} policy proposal and a way forward. \emph{Journal of
+Librarianship and Information Science}, 096100062211467.
+\url{https://doi.org/10.1177/09610006221146771}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Laakso_2016}{}}%
 Laakso, M., \& Björk, B.-C. (2016). Hybrid open access--a longitudinal
@@ -1040,6 +1129,11 @@ Statistician}, \emph{72}(1), 80--88.
 Matthias, L., Jahn, N., \& Laakso, M. (2019). The two-way street of open
 access journal publishing: Flip it and reverse it. \emph{Publications},
 \emph{7}(2), 23. \url{https://doi.org/10.3390/publications7020023}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Mittermaier_2015}{}}%
+Mittermaier, B. (2015). Double dipping in hybrid open access -- chimera
+or reality? \emph{{ScienceOpen} Research}.
+\url{https://doi.org/10.14293/s2199-1006.1.sor-socsci.aowntu.v1}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Mittermaier_2021}{}}%
 Mittermaier, B. (2021). {Rolle des Open Access Monitor Deutschland bei
@@ -1140,6 +1234,22 @@ Robinson-Garcia, N., Costas, R., \& Leeuwen, T. N. van. (2020). Open
 access uptake by universities worldwide. \emph{{PeerJ}}, \emph{8},
 e9410. \url{https://doi.org/10.7717/peerj.9410}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Schares_2022}{}}%
+Schares, E. (2022). Unsub extender: A python-based web application for
+visualizing unsub data. \emph{Quantitative Science Studies},
+\emph{3}(3), 600--623. \url{https://doi.org/10.1162/qss_a_00200}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Schares_2023}{}}%
+Schares, E. (2023). Impact of the 2022 OSTP memo: A bibliometric
+analysis of US federally funded publications, 2017--2021.
+\emph{Quantitative Science Studies}, \emph{4}(1), 1--21.
+\url{https://doi.org/10.1162/qss_a_00237}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Schiermeier_2018}{}}%
+Schiermeier, Q. (2018). China backs bold plan to tear down journal
+paywalls. \emph{Nature}, \emph{564}(7735), 171--172.
+\url{https://doi.org/10.1038/d41586-018-07659-5}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Schiltz_2018}{}}%
 Schiltz, M. (2018). Science without publication paywalls: cOAlition s
 for the realisation of full and immediate open access. \emph{PLOS
@@ -1175,6 +1285,12 @@ Zhang, L., Wei, Y., Huang, Y., \& Sivertsen, G. (2022). Should open
 access lead to closed research? The trends towards paying to perform
 research. \emph{Scientometrics}, \emph{127}(12), 7653--7679.
 \url{https://doi.org/10.1007/s11192-022-04407-5}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Zhao_2023}{}}%
+Zhao, X., Akbaritabar, A., Kashyap, R., \& Zagheni, E. (2023). A gender
+perspective on the global migration of scholars. \emph{Proceedings of
+the National Academy of Sciences}, \emph{120}(10).
+\url{https://doi.org/10.1073/pnas.2214664120}
 
 \end{CSLReferences}
 
