--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -114,7 +114,19 @@ abstract = {{The SOAP (Study of Open Access Publishing) project has compiled dat
 
 @article{Pinhasi_2021, title={Austrian Transition to Open Access: a collaborative approach}, volume={34}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.561}, DOI={10.1629/uksg.561}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Pinhasi, Rita and Hölbling, Lothar and Kromp, Brigitte}, year={2021} }
 
-@misc{Brainard_2023, DOI={10.1126/science.adj3282}, author = {Jeffery Brainard}, journal={Science: SCIENCEINSIDER}, year={2023}, title = {‘Transformative’ journals get booted for switching to open access too slowly} }
+@misc{Brainard_2023, DOI={10.1126/science.adj3282}, author = {Jeffery Brainard}, journal={Science}, year={2023}, title = {‘Transformative’ journals get booted for switching to open access too slowly} }
+
+@article{Brainard_2021, title={California universities and Elsevier make up, ink big open-access deal}, ISSN={1095-9203}, url={http://dx.doi.org/10.1126/science.abi5505}, DOI={10.1126/science.abi5505}, journal={Science}, publisher={American Association for the Advancement of Science (AAAS)}, author={Brainard, Jeffrey}, year={2021}, month=mar }
+
+@article{Schares_2022, title={Unsub Extender: A Python-based web application for visualizing Unsub data}, volume={3}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00200}, DOI={10.1162/qss_a_00200}, number={3}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Schares, Eric}, year={2022}, pages={600–623} }
+
+@article{Aviv_Reuven_2021, title={Publication patterns’ changes due to the COVID-19 pandemic: a longitudinal and short-term scientometric analysis}, volume={126}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-021-04059-x}, DOI={10.1007/s11192-021-04059-x}, number={8}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Aviv-Reuven, Shir and Rosenfeld, Ariel}, year={2021}, month=jun, pages={6761–6784} }
+
+@article{Zhao_2023, title={A gender perspective on the global migration of scholars}, volume={120}, ISSN={1091-6490}, url={http://dx.doi.org/10.1073/pnas.2214664120}, DOI={10.1073/pnas.2214664120}, number={10}, journal={Proceedings of the National Academy of Sciences}, publisher={Proceedings of the National Academy of Sciences}, author={Zhao, Xinyi and Akbaritabar, Aliakbar and Kashyap, Ridhi and Zagheni, Emilio}, year={2023}, month=feb }
+
+@article{Schares_2023, title={Impact of the 2022 OSTP memo: A bibliometric analysis of US federally funded publications, 2017–2021}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00237}, DOI={10.1162/qss_a_00237}, number={1}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Schares, Eric}, year={2023}, pages={1–21} }
+
+@article{Schiermeier_2018, title={China backs bold plan to tear down journal paywalls}, volume={564}, ISSN={1476-4687}, url={http://dx.doi.org/10.1038/d41586-018-07659-5}, DOI={10.1038/d41586-018-07659-5}, number={7735}, journal={Nature}, publisher={Springer Science and Business Media LLC}, author={Schiermeier, Quirin}, year={2018}, month=dec, pages={171–172} }
 
 @article{Moskovkin_2022, title={Transformative agreements in the development of open access}, volume={34}, ISSN={1941-1278}, url={http://dx.doi.org/10.1080/1941126X.2022.2099000}, DOI={10.1080/1941126x.2022.2099000}, number={3}, journal={Journal of Electronic Resources Librarianship}, publisher={Informa UK Limited}, author={Moskovkin, Vladimir M. and Saprykina, Tatyana V. and Boichuk, Igor V.}, year={2022}, month=jul, pages={165–207} }
 
@@ -154,6 +166,10 @@ year = {2022}
   doi          = {10.5281/zenodo.4558704},
   url          = {https://doi.org/10.5281/zenodo.4558704}
 }
+
+@article{Bosman_2021, title={Advancing open access in the Netherlands after 2020: from quantity to quality}, volume={34}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.545}, DOI={10.1629/uksg.545}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Bosman, Jeroen and de Jonge, Hans and Kramer, Bianca and Sondervan, Jeroen}, year={2021} }
+
+@article{Koley_2023, title={Limitations of the “Indian one nation, one subscription” policy proposal and a way forward}, ISSN={1741-6477}, url={http://dx.doi.org/10.1177/09610006221146771}, DOI={10.1177/09610006221146771}, journal={Journal of Librarianship and Information Science}, publisher={SAGE Publications}, author={Koley, Moumita and Lala, Kanchan}, year={2023}, month=jan, pages={096100062211467} }
 
  @article{Mu_oz_V_lez_2024, title={Strategies for Negotiating and Signing Transformative Agreements in the Global South: The Colombia Consortium Experience}, volume={64}, ISSN={1540-3564}, url={http://dx.doi.org/10.1080/01930826.2023.2287945}, DOI={10.1080/01930826.2023.2287945}, number={1}, journal={Journal of Library Administration}, publisher={Informa UK Limited}, author={Muñoz-Vélez, Hernán and Pallares, César and Echavarría, Andrés Felipe and Contreras, Julysa and Pavas, Andrés and Bello, David and Rendón, César and Calderón-Rojas, Jacqueline and Garzón, Fernando}, year={2024}, month=jan, pages={80–98} }
  
@@ -250,20 +266,16 @@ year = {2022}
   journal = {Journal of the Association for Information Science and Technology}
 }
 
-@misc{Fraser_2020, 
-  doi = {10.1371/journal.pbio.3000959},
-	url = {https://doi.org/10.1371%2Fjournal.pbio.3000959},
-	year = 2021,
-	month = {apr},
-	publisher = {Public Library of Science ({PLoS})},
-	volume = {19},
-	number = {4},
-	pages = {e3000959},
-  author = {Nicholas Fraser and Liam Brierley and Gautam Dey and Jessica K Polka and Máté Pálfy and Federico Nanni and Jonathon Alexis Coates}, 
-  title = {The evolving role of preprints in the dissemination of {COVID}-19 research and their impact on the science communication landscape},
-  journal = {{PLOS} Biology}
-  }
+@article{Fraser_2021, title={The evolving role of preprints in the dissemination of COVID-19 research and their impact on the science communication landscape}, volume={19}, ISSN={1545-7885}, url={http://dx.doi.org/10.1371/journal.pbio.3000959}, DOI={10.1371/journal.pbio.3000959}, number={4}, journal={PLOS Biology}, publisher={Public Library of Science (PLoS)}, author={Fraser, Nicholas and Brierley, Liam and Dey, Gautam and Polka, Jessica K. and Pálfy, Máté and Nanni, Federico and Coates, Jonathon Alexis}, editor={Dirnagl, Ulrich}, year={2021}, month=apr, pages={e3000959} }
 
+@misc{hanson2023strain,
+      title={The strain on scientific publishing}, 
+      author={Mark A. Hanson and Pablo Gómez Barreiro and Paolo Crosetto and Dan Brockington},
+      year={2023},
+      eprint={2309.15884},
+      archivePrefix={arXiv},
+      primaryClass={cs.DL}
+}
 
 @article{Creaser_2010,
   doi = {10.1080/13614533.2010.518851},
